Fixes color and alignment of mobile menu

--- a/resources/assets/styles/components/navigation.scss
+++ b/resources/assets/styles/components/navigation.scss
@@ -64,6 +64,7 @@
 
 .menu-open .toggle-menu {
   background-color: theme("colors.menuHover");
+  color: theme("colors.main");
 }
 
 .toggle-menu {
